--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-scripts": "4.0.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
+    "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -46,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
